# FastGEMF

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
docs/source/: conf.py  index.rst
predefined instants/: SAIS_inst.yaml  SI1I2S.yaml  SI1I2S_inst.yaml  SIR_inst.yaml  SIS_inst.yaml
src/: requirements.txt
src/fastgemf/: .gitignore  GEMFsimulation.py  __init__.py  initial_condition.py  visualization.py
tests/: simple_sir.py
