[project]
name = "fastgemf"
version = "0.1.3"
description = "Scalable High-Speed Simulation of Stochastic Spreading Processes over Complex Multilayer Networks"
dependencies = [
    "numpy",
    "pandas",
    "pyyaml",
    "networkx",
    "matplotlib",
    "tqdm",
    "scipy",
    "sortedcontainers",
    "pyvis",
]
include = ["requirements.txt"]
[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"